Mobile White Space Issue
- Imported react-observer to attempt to fix the white space issue caused by the top/bottom bars & rotation

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@ body,
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden; /* Prevent scrolling */
     font-family: Arial, Helvetica, sans-serif; 
     color: white; 
     font-size: 18px; 
@@ -25,7 +26,7 @@ body,
 
 canvas, .r3f
 {
-    position: absolute;
+    position: fixed; 
     top: 0;
     left: 0;
     width: 100%;
